--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,9 @@
           <a href="./index.html" class="logo-link"><span class="logo-accent">Web</span>Studio</a>
           <ul class="nav-list">
             <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
-            <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link current-link">Портфолио</a>
+            </li>
             <li class="nav-item"><a href="./" class="nav-link">Контакты</a></li>
           </ul>
           <ul class="contacts-list">
@@ -67,7 +69,14 @@
           </ul>
           <ul class="projects-list">
             <li class="projects-item">
-              <img class="projects-image" src="./img/laptop.jpg" alt="ноутбук" width="370" />
+              <div class="pictures-wrapper">
+                <img class="projects-image" src="./img/laptop.jpg" alt="ноутбук" width="370" />
+                <p class="animated-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                  лице.
+                </p>
+              </div>
               <div class="projects-wrap">
                 <h2 class="projects-title">Технокряк</h2>
                 <p class="projects-text">Веб-сайт</p>
